--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-scalpel",
   "main": "lib/index.js",
   "description": "",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "keywords": [
     "webpack",
     "analyser"
@@ -16,10 +16,11 @@
     "name": "zhangking",
     "email": "zhangking520@gmail.com"
   },
-  "readmeFilename": "README.md",
-  "tnpm": {
-    "mode": "npminstall"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fe-scalpel/webpack-scalpel"
   },
+  "readmeFilename": "README.md",
   "dependencies": {
     "acorn": "^5.0.3",
     "ejs": "^2.5.6",
